examples/test/testpolicy10428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10428
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key32: value2
      key37: value22
      key43: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value40
          key20: value49
      podSelector:
        matchLabels:
          key34: value46
          key25: value19
